button toggle and routes/controllers added

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Dosing Pump Controller</title>
   </head>
   <body>
-    <button id="button">testing</button>
+    <h1><a href="info.html">Info Page</a></h1>
+    <button id="button">ledTog</button>
     <script src="script.js"></script>
   </body>
 </html>
